--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,53 @@
-# Copy this file to .env and configure your settings
+# =============================================================================
+# BISQ VPN CONTAINER CONFIGURATION TEMPLATE
+# =============================================================================
+# Copy this file to .env and configure your settings:
+# cp .env.example .env
 
-# Timezone
-TZ=America/Sao_Paulo
+# -----------------------------------------------------------------------------
+# VPN Configuration (Gluetun) - REQUIRED
+# -----------------------------------------------------------------------------
+VPN_SERVICE_PROVIDER=custom
+VPN_TYPE=wireguard
 
-# VNC Password for accessing the Bisq interface
-VNC_PASSWORD=bisqvnc
+# WireGuard Configuration - Replace with your VPN provider's values
+WIREGUARD_PRIVATE_KEY=YOUR_PRIVATE_KEY_HERE
+WIREGUARD_ADDRESSES=10.x.x.x/32
+WIREGUARD_PUBLIC_KEY=YOUR_PUBLIC_KEY_HERE
+WIREGUARD_PRESHARED_KEY=YOUR_PRESHARED_KEY_HERE
+WIREGUARD_ENDPOINT_IP=x.x.x.x
+WIREGUARD_ENDPOINT_PORT=1234
+WIREGUARD_PERSISTENT_KEEPALIVE_INTERVAL=15s
+WIREGUARD_MTU=1320
+WIREGUARD_ALLOWED_IPS=0.0.0.0/0
 
-# Bisq Version to install
+# VPN Security Settings
+KILL_SWITCH=on
+
+# DNS Configuration
+DNS_KEEP_NAMESERVER=off
+DOT=on
+DOT_PROVIDERS=cloudflare
+BLOCK_MALICIOUS=on
+BLOCK_ADS=off
+
+# Firewall Configuration (allow VNC ports)
+FIREWALL_INPUT_PORTS=6080,5901
+
+# Health Check Settings
+HEALTH_SERVER_ADDRESS=:8000
+HEALTH_VPN_DURATION_INITIAL=30s
+HEALTH_VPN_DURATION_ADDITION=5s
+HTTP_CONTROL_SERVER_AUTH=off
+
+# -----------------------------------------------------------------------------
+# Application Configuration
+# -----------------------------------------------------------------------------
+# Bisq version to install (check: https://github.com/bisq-network/bisq/releases)
 BISQ_VERSION=1.9.21
+
+# VNC Password for accessing the Bisq interface via web browser
+VNC_PASSWORD=bisqvnc
 
 # User/Group ID mapping (match your host user to avoid permission issues)
 # Find your user ID with: id -u
@@ -15,7 +55,16 @@ BISQ_VERSION=1.9.21
 PUID=1000
 PGID=1000
 
+# System Settings
+TZ=America/Sao_Paulo
+LOG_LEVEL=info
+
+# =============================================================================
 # SETUP INSTRUCTIONS:
+# =============================================================================
 # 1. Copy this file: cp .env.example .env
-# 2. Update docker/gluetun/config/gluetun.env with your VPN credentials
-# 3. Copy and configure WireGuard: cp docker/gluetun/config/wireguard.conf.example docker/gluetun/config/wireguard.conf
+# 2. Replace ALL placeholder values (YOUR_*_HERE and x.x.x.x)
+# 3. Get WireGuard config from your VPN provider
+# 4. Start containers: docker compose up -d
+# 5. Access Bisq at: http://localhost:6080 (password: your VNC_PASSWORD)
+# =============================================================================
