--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ volumes/gluetun/
 # Environment files (keep .env.example but not .env)
 .env
 
+# Secrets directory
+secrets/
+
 # Gluetun configuration (keep .example but not actual config)
 docker/gluetun/config/gluetun.env
 
