--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,27 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+    # Resource limits for VPN container
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    # Logging configuration
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "5"
+        labels: "service=gluetun,component=vpn"
+    # Security configuration
+    security_opt:
+      - no-new-privileges:true
+      - seccomp:unconfined  # Required for VPN functionality
+      - apparmor:unconfined  # Required for network operations
 
   bisq:
     build:
@@ -51,3 +72,28 @@ services:
     stdin_open: true
     tty: true
     restart: unless-stopped
+    # Resource limits for Bisq application container
+    deploy:
+      resources:
+        limits:
+          cpus: '4.0'
+          memory: 4G
+        reservations:
+          cpus: '1.0'
+          memory: 1G
+    # Logging configuration
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200m"
+        max-file: "10"
+        labels: "service=bisq,component=application"
+    # Security configuration
+    security_opt:
+      - no-new-privileges:true
+      - seccomp=./security/bisq-seccomp.json  # Use custom seccomp profile
+    # Additional security hardening
+    read_only: false  # Cannot be read-only due to Bisq data writes
+    tmpfs:
+      - /tmp:noexec,nosuid,size=512m
+      - /var/tmp:noexec,nosuid,size=256m
