📝 docs: update repository references to emsilva/bisq-vpn-docker
Update all stub repository references in README.md and Dockerfiles to point to the correct GitHub repository location.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
 # =============================================================================
-# BISQ VPN CONTAINER CONFIGURATION TEMPLATE
+# BISQ DOCKER CONTAINER CONFIGURATION TEMPLATE
 # =============================================================================
 # Copy this file to .env and configure your settings:
 # cp .env.example .env
+#
+# SETUP OPTIONS:
+# 1. DIRECT (Recommended for most users): docker compose -f docker-compose.novpn.yml up -d
+# 2. WITH VPN (Only if ISP blocks Tor): docker compose up -d
 
 # -----------------------------------------------------------------------------
-# VPN Configuration (Gluetun) - REQUIRED
+# VPN Configuration (Gluetun) - ONLY FOR ISP TOR BYPASS
 # -----------------------------------------------------------------------------
+# ⚠️  SKIP this section if using docker-compose.novpn.yml
+# VPN is NOT for privacy (Tor already provides that) - it's to bypass ISPs that block Tor
 VPN_SERVICE_PROVIDER=custom
 VPN_TYPE=wireguard
 
@@ -62,9 +68,19 @@ LOG_LEVEL=info
 # =============================================================================
 # SETUP INSTRUCTIONS:
 # =============================================================================
+# 
+# OPTION 1: DIRECT CONNECTION (Recommended for most users)
 # 1. Copy this file: cp .env.example .env
-# 2. Replace ALL placeholder values (YOUR_*_HERE and x.x.x.x)
+# 2. Configure only the Application Configuration section below (optional)
+# 3. Start containers: docker compose -f docker-compose.novpn.yml up -d
+# 4. Access Bisq at: http://localhost:6080 (password: your VNC_PASSWORD)
+#
+# OPTION 2: VPN BYPASS (Only if your ISP blocks Tor)
+# 1. Copy this file: cp .env.example .env
+# 2. Replace ALL VPN placeholder values (YOUR_*_HERE and x.x.x.x)
 # 3. Get WireGuard config from your VPN provider
 # 4. Start containers: docker compose up -d
 # 5. Access Bisq at: http://localhost:6080 (password: your VNC_PASSWORD)
+#
+# ⚠️  NOTE: VPN is NOT for privacy - Tor already provides P2P privacy
 # =============================================================================
