🔧 fix: use nosemgrep comment to suppress false positive
Replace .semgrepignore file with inline nosemgrep comment in Dockerfile.
This is the correct way to suppress specific rule violations while
documenting why the violation is intentional (s6-overlay architecture).

--- a/docker/bisq/Dockerfile
+++ b/docker/bisq/Dockerfile
@@ -169,4 +169,5 @@ HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
 # Use s6-overlay as init system
 # Note: Starting as root is intentional for s6-overlay process supervision
 # Individual services run as non-root user 'bisq' via s6 configuration
+# nosemgrep: dockerfile.security.missing-user.missing-user
 ENTRYPOINT ["/init"]
