--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -259,7 +259,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [build-test, container-scan, compose-validation]
-    if: false # Disabled until repository permissions are fixed
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
