--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,11 +47,7 @@ services:
       - apparmor:unconfined  # Required for network operations
 
   bisq:
-    build:
-      context: docker/bisq
-      dockerfile: Dockerfile
-      args:
-        - BISQ_VERSION=${BISQ_VERSION:-1.9.21}
+    image: ghcr.io/emsilva/bisq-vpn-docker:latest
     container_name: bisq
     network_mode: "service:gluetun"
     depends_on:
