🔧 fix: switch to local build for Ubuntu 24.04 compatibility
Replace pre-built image with local build to ensure Ubuntu 24.04 fixes
are included, specifically the noVNC websockify command update.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,11 @@ services:
       - apparmor:unconfined  # Required for network operations
 
   bisq:
-    image: ghcr.io/emsilva/bisq-vpn-docker:latest
+    build:
+      context: docker/bisq
+      dockerfile: Dockerfile
+      args:
+        - BISQ_VERSION=${BISQ_VERSION:-1.9.21}
     container_name: bisq
     network_mode: "service:gluetun"
     depends_on:
