--- a/.dockerignore
+++ b/.dockerignore
@@ -35,6 +35,10 @@ known_hosts
 # IDE and editor files
 .vscode/
 .idea/
+.playwright/
+.playwright-mcp/
+playwright-report/
+test-results/
 *.swp
 *.swo
 *~
