--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/bisq-vpn-docker
+  IMAGE_NAME: ${{ github.repository_owner }}/bisq-vpn-docker
 
 jobs:
   # =============================================================================
