--- a/docker-compose.novpn.yml
+++ b/docker-compose.novpn.yml
@@ -38,14 +38,9 @@ services:
     restart: unless-stopped
     
     # Resource limits for Bisq application container
-    deploy:
-      resources:
-        limits:
-          cpus: '4.0'
-          memory: 4G
-        reservations:
-          cpus: '1.0'
-          memory: 1G
+    mem_limit: 4g
+    mem_reservation: 1g
+    cpus: 4.0
     
     # Logging configuration
     logging:
